# esp-rust-lighting

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
scripts/: build.sh  espflash.sh  flash.sh  run-wokwi.sh
src/: main.rs
src/sub_modules/: errors.rs  esp_random.rs  esp_sntp_wrapper.rs  led_strip_animations.rs  mod.rs  utils.rs  web_server.rs  wifi_manager.rs
webblob/: index.html  wasm_animation_lang_bg.wasm  wasm_blob
