[package]
name = "std-esp-rust-lighting"
version = "0.1.0"
authors = ["maba_kalox <llocnex@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
esp-idf-hal = "0.40.1"
embedded-hal = "0.2.7"
embedded-svc = { version = "0.24.0" }
toml-cfg = "0.1.3"
anyhow = "1.0.65"
log = "0.4.17"
smart-leds-trait = "0.2.1"
ws2812-esp32-rmt-driver = "0.4.0"
thiserror = "1.0.37"
serde_qs = "0.10.1"
serde = { version = "1.0.147", features = ["derive"] }
rand = "0.8.5"
base64 = "0.20.0"
animation-lang = { path = "../animation_lang" }
url = "2.3.1"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"


[patch.crates-io]
ws2812-esp32-rmt-driver = { git = "https://github.com/vojty/ws2812-esp32-rmt-driver.git", branch = "upgrade-esp-idf-sys-0.32" } # Untill PR merged
