[package]
name = "std-esp-rust-lighting"
version = "0.1.0"
authors = ["maba_kalox <llocnex@gmail.com>"]
edition = "2021"
resolver = "2"

[workspace]
members = ["frontend"]

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
esp-idf-hal = "0.40.1"
embedded-hal = "0.2.7"
embedded-svc = { version = "0.24.0", features = ["use_serde"] }
toml-cfg = "0.1.3"
anyhow = "1.0.65"
log = "0.4.17"
smart-leds-trait = "0.2.1"
ws2812-esp32-rmt-driver = "0.5.0"
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
rand = "0.8.5"
base64 = "0.20.0"
animation-lang = { git = "https://github.com/MabaKalox/animation-lang.git" }
serde_urlencoded = "0.7.1"
form_urlencoded = "1.1.0"
binary_macros = "1.0.0"
heapless = "0.7.16"
lazy_static = "1.4.0"
serde_json = "1.0.91"
enum_dispatch = "0.3.9"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
wasm-bindgen-cli-support = "0.2.83"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
