[package]
name = "esp-rust-lighting"
version = "0.1.0"
authors = ["maba_kalox <llocnex@gmail.com>"]
edition = "2021"
resolver = "2"

[workspace]
members = ["frontend"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart", "native"] }
esp-idf-svc = { version = "0.46", features = ["experimental"] }
esp-idf-hal = "0.41"
embedded-hal = "0.2.7"
embedded-svc = { version = "0.25.3", features = ["use_serde"] }
toml-cfg = "0.1.3"
anyhow = "1.0.72"
log = "0.4.19"
smart-leds-trait = "0.2.1"
ws2812-esp32-rmt-driver = "0.6.0"
thiserror = "1.0.44"
serde = { version = "1.0.182", features = ["derive"] }
rand = "0.8.5"
base64 = "0.21.2"
animation-lang = { git = "https://github.com/MabaKalox/animation-lang.git" }
serde_urlencoded = "0.7.1"
form_urlencoded = "1.1.0"
binary_macros = "1.0.0"
heapless = "0.7.16"
lazy_static = "1.4.0"
serde_json = "1.0.104"
enum_dispatch = "0.3.9"

[build-dependencies]
embuild = "0.31.2"
anyhow = "1.0.72"
wasm-bindgen-cli-support = "0.2.83"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
